--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>	
 		<p class="info">Hi ! I'm csdoker , welcome to my world.</p>
 		<p class="link">
-			<a href="https://blog.csdoker.com/" target="_blank">BLOG</a>
+			<a href="http://blog.i1i0.com" target="_blank">BLOG</a>
 		</p>
 		<p class="link">
 			<a href="https://github.com/csd758371536" target="_blank">GITHUB</a>
