--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
 		<div class="avatar">
 			<img src="./img/avatar.jpg" alt="avatar">
 		</div>	
-		<p class="info">Hi ! I'm csdoker , welcome to my world.</p>
+		<p class="info">Welcome to my world.</p>
 		<p class="link">
 			<a href="http://blog.i1i0.com" target="_blank">BLOG</a>
 		</p>
 		<p class="link">
-			<a href="https://github.com/csd758371536" target="_blank">GITHUB</a>
+			<a href="https://github.com/XTULiuHui" target="_blank">GITHUB</a>
 		</p>
 		<p class="link">
-			<a href="https://blog.csdoker.com/Project-Page/project.html" target="_blank">PROJECT</a>
+			<a href="https://github.com/XTULiuHui" target="_blank">PROJECT</a>
 		</p>
 		<p class="link">
-			<a href="https://resume.csdoker.com/" target="_blank">ABOUT</a>
+			<a href="https://github.com/XTULiuHui" target="_blank">ABOUT</a>
 		</p>
 	</div>
 	<div class="footer">
 		<div class="time" id="aa"></div>
-		<a class="record" href="http://www.miitbeian.gov.cn/" target="_blank">蜀ICP备17025658号</a>
+		<a class="record" href="http://www.miitbeian.gov.cn/" target="_blank">湘ICP备16007383号</a>
 		<div class="copyright">
-			© 2016 - <script>document.write(new Date().getFullYear());</script> Csdoker
+			© 2016 - <script>document.write(new Date().getFullYear());</script> Hexo
 		</div>
 	</div>
 </body>
