--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="description" content="Csdoker's Homepage">
 	<meta name="keywords" content="Csdoker">
-	<title>Csdoker</title>
+	<title>I1I0</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="./css/index.css">
 	<link rel="stylesheet" media="screen" href="./css/style.css">
