--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="description" content="Csdoker's Homepage">
 	<meta name="keywords" content="Csdoker">
-	<title>I1I0</title>
+	<title>惟你</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<link rel="stylesheet" href="./css/index.css">
 	<link rel="stylesheet" media="screen" href="./css/style.css">
@@ -43,7 +43,7 @@
 		</div>	
 		<p class="info">Welcome to my world.</p>
 		<p class="link">
-			<a href="http://blog.i1i0.com" target="_blank">BLOG</a>
+			<a href="http://blog.weu.io" target="_blank">BLOG</a>
 		</p>
 		<p class="link">
 			<a href="https://github.com/XTULiuHui" target="_blank">GITHUB</a>
@@ -52,7 +52,7 @@
 			<a href="https://github.com/XTULiuHui" target="_blank">PROJECT</a>
 		</p>
 		<p class="link">
-			<a href="https://github.com/XTULiuHui" target="_blank">ABOUT</a>
+			<a href="https://blog.weu.io" target="_blank">ABOUT</a>
 		</p>
 	</div>
 	<div class="footer">
